Bug 120066 - FILEOPEN: file gets modified without changing anything
Summary: FILEOPEN: file gets modified without changing anything
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ModifiedStatus Regressions-AW080
  Show dependency treegraph
 
Reported: 2018-09-22 18:53 UTC by Xisco Faulí
Modified: 2018-10-02 16:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-09-22 18:53:55 UTC
Steps to reproduce:
1. Open attachment 144332 [details] from bug 119341
2. Once open, close it without changing anything

-> Save dialog is prompted

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 66232248ff55639052ddb76918d555e21dc9c46b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-09-22 18:55:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6c14c27c75a03e2363f2b363ddf0a6f2f46cfa91

author	Armin Le Grand <Armin.Le.Grand@cib.de (CIB)>	2018-03-01 15:54:32 +0100
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-04-06 22:29:02 +0200
commit 6c14c27c75a03e2363f2b363ddf0a6f2f46cfa91 (patch)
tree e66f50adb222dbc1490b4df2d3c63541dad999ac
parent e1b247a843c5eb850fe0079819239d9883412d38 (diff)
SOSAW080: Added first bunch of basic changes to helpers

Bisected with: bibisect-linux64-6.1

Adding Cc: to Armin Le Grand
Comment 2 Armin Le Grand (collabora) 2018-09-29 12:40:27 UTC
Cannot open that file using PPT (MSOffice Professiolal plus 2017?), is that known? Wanted to reduce the example, did not work. With just 1st slide (afer remove all others, save-as, using PPT filter)
Comment 3 Armin Le Grand (collabora) 2018-09-29 12:45:01 UTC
Does not happen with fresh small *odp
Does not happen with fresh small PPT...
Comment 4 Armin Le Grand (collabora) 2018-09-29 12:58:46 UTC
May have to do with SdrObjCustomShape helper SdrObjects - these get created and changed when geometry of a CustomShape i sneeded. Before the praradigm change, these SdrObjects had no model. Now they are part of the regular one. Checking with a - hopefully now - constructable small test file.
Comment 5 Armin Le Grand (collabora) 2018-09-29 13:06:34 UTC
May have to be a combination of CustomShape and CustomStyle to be set...
Comment 6 Armin Le Grand (collabora) 2018-09-29 13:28:26 UTC
Think I got it - first fix on https://gerrit.libreoffice.org/#/c/61132/
Comment 7 Commit Notification 2018-09-29 17:36:43 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c01b66846d6651600893ae5d3c590e9076065032

tdf#120066 Only invalidate SdrModel when SdrObject has SdrPage

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2018-10-01 14:27:50 UTC
(In reply to Armin Le Grand (CIB) from comment #2)
> Cannot open that file using PPT (MSOffice Professiolal plus 2017?), is that
> known? Wanted to reduce the example, did not work. With just 1st slide (afer
> remove all others, save-as, using PPT filter)

I can't reproduce it in MSO 2010. Is it another incompatibility between mso versions ?
Comment 9 BogdanB 2018-10-02 14:53:33 UTC
Everything is ok, no prompt dialog.

tested on 
Version: 6.2.0.0.alpha0+
Build ID: a906b68a9fff30c2af5c03189e59c1952cd3f69f
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-09-30_19:07:59
Locale: ro-RO (ro_RO.UTF-8); Calc: threaded
Comment 10 Xisco Faulí 2018-10-02 16:36:44 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: e9c1cbce903d325b1e19602d72765511589f5bf2
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Armin, should it be backported to 6-1 ?