tdf#120066 Only invalidate SdrModel when SdrObject has SdrPage

Change-Id: If32dd85f8d04a3f597b033272ffc2fc0bb73fbad
Reviewed-on: https://gerrit.libreoffice.org/61132
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>